--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
   <header class="header">
-    <a href="#" class="logo">Jouets Kids</a>
     <nav class="navbar">
-      <a href="#">Accueil</a>
-      <a href="#">Info</a>
-      <a href="#">Panier</a>
+      <a href="index.html" class="logo">Jouets Kids</a>
+      <div class="nav-links">
+        <ul>
+          <li class="active"><a href="index.html">Accueil</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Panier</a></li>
+        </ul>
+      </div>
+      <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
     </nav>
   </header>
   <main>
@@ -39,4 +44,21 @@
     </div>
   </main>
 </body>
+    <script>
+        const menuHamburger = document.querySelector(".menu-hamburger");
+        const navLinks = document.querySelector(".nav-links");
+        const allContainer = document.querySelector(".all_container");
+        let isAllContainerVisible = true;
+
+      menuHamburger.addEventListener('click', () => {
+        navLinks.classList.toggle('mobile-menu');
+        isAllContainerVisible = !isAllContainerVisible;
+
+        if (isAllContainerVisible) {
+          allContainer.classList.remove('item-container-transition');
+        } else {
+          allContainer.classList.add('item-container-transition');
+        }
+      });
+    </script>
 </html>
