--- a/product_details.html
+++ b/product_details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product Details</title>
+  <title>Détails Produit</title>
   <link rel="stylesheet" href="css/style_product.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         <ul>
           <li class="active"><a href="index.html">Accueil</a></li>
           <li><a href="#">Support</a></li>
-          <li><a href="#">Panier</a></li>
+          <li><a href="basket.html">Panier</a></li>
         </ul>
       </div>
       <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
@@ -26,27 +26,9 @@
   </header>
   <main>
     <div class="content">
-      <!-- Votre contenu principal ici -->
     </div>
     <div id="productDetails" class="item-container"></div>
   </main>
   <script src="js/product_details.js"></script>
 </body>
-  <script>
-    const menuHamburger = document.querySelector(".menu-hamburger");
-    const navLinks = document.querySelector(".nav-links");
-    const allContainer = document.querySelector(".item-container");
-    let isAllContainerVisible = true;
-
-  menuHamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('mobile-menu');
-    isAllContainerVisible = !isAllContainerVisible;
-
-    if (isAllContainerVisible) {
-      allContainer.classList.remove('item-container-transition');
-    } else {
-      allContainer.classList.add('item-container-transition');
-    }
-  });
-  </script>
 </html>
