--- a/index.html
+++ b/index.html
@@ -1,47 +1,69 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KEDUFRONT</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/index.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KEDUFRONT</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
-  <header class="header">
-    <nav class="navbar">
-      <a href="index.html" class="logo">KEDUFRONT</a>
-      <div class="nav-links">
-        <ul>
-          <li class="active"><a href="index.html">Accueil</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="basket.html">Panier</a></li>
-        </ul>
-      </div>
-      <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
-    </nav>
-  </header>
-  <main>
-    <div class="all_container">
-      <div id="item1" class="item-container">
-        <a href="#" onclick="openProductDetails(1)">Nom du produit 1</a>
-      </div>
-      <div id="item2" class="item-container">
-        <a href="#" onclick="openProductDetails(2)">Nom du produit 2</a>
-      </div>
-      <div id="item3" class="item-container">
-        <a href="#" onclick="openProductDetails(3)">Nom du produit 3</a>
-      </div>
-      <div id="item4" class="item-container">
-        <a href="#" onclick="openProductDetails(4)">Nom du produit 4</a>
-      </div>
-      <div id="item5" class="item-container">
-        <a href="#" onclick="openProductDetails(5)">Nom du produit 5</a>
-      </div>
-      <div id="item6" class="item-container">
-        <a href="#" onclick="openProductDetails(6)">Nom du produit 6</a>
-      </div>
-    </div>
-  </main>
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="logo">KEDUFRONT</a>
+            <div class="nav-links">
+                <ul>
+                    <li class="active"><a href="index.html">Accueil</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="basket.html">Panier</a></li>
+                </ul>
+            </div>
+            <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
+        </nav>
+    </header>
+    <main>
+        <div class="all_container">
+            <div id="item1" class="item-container">
+                <a href="#" onclick="openProductDetails(1)">Nom du produit 1</a>
+            </div>
+            <div id="item2" class="item-container">
+                <a href="#" onclick="openProductDetails(2)">Nom du produit 2</a>
+            </div>
+            <div id="item3" class="item-container">
+                <a href="#" onclick="openProductDetails(3)">Nom du produit 3</a>
+            </div>
+            <div id="item4" class="item-container">
+                <a href="#" onclick="openProductDetails(4)">Nom du produit 4</a>
+            </div>
+            <div id="item5" class="item-container">
+                <a href="#" onclick="openProductDetails(5)">Nom du produit 5</a>
+            </div>
+            <div id="item6" class="item-container">
+                <a href="#" onclick="openProductDetails(6)">Nom du produit 6</a>
+            </div>
+        </div>
+    </main>
+    <section class="footer">
+        <footer>
+            <div class="footer-nav">
+                <a href="#">A propos</a>
+                <a href="#">Nos Doudou</a>
+                <a href="#">Assistance</a>
+            </div>
+            <div class="footer-nav-2">
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Chartes qualité</a>
+                <a href="#">Centre d'aide</a>
+            </div>
+            <div class="footer-nav-3">
+                <a href="#">Conditions générales de vente</a>
+                <a href="#">Qualité</a>
+                <a href="#">Nous contacter</a>
+            </div>
+            <div class="footer-nav-4">
+                <a href="#">Données et confidentalité</a>
+            </div>
+        </footer>
+    </section>
 </body>
 </html>
