--- a/product_details.html
+++ b/product_details.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Détails Produit</title>
-  <link rel="stylesheet" href="css/style_product.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Détails Produit</title>
+    <link rel="stylesheet" href="css/style_product.css">
 </head>
 <body>
-  <div class="container">
-    <div class="left-band"></div>
-    <div class="right-band"></div>
-  </div>
-  <header class="header">
-    <nav class="navbar">
-      <a href="index.html" class="logo">Jouets Kids</a>
-      <div class="nav-links">
-        <ul>
-          <li class="active"><a href="index.html">Accueil</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="basket.html">Panier</a></li>
-        </ul>
-      </div>
-      <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
-    </nav>
-  </header>
-  <main>
-    <div class="content">
+    <div class="container">
+        <div class="left-band"></div>
+        <div class="right-band"></div>
     </div>
-    <div id="productDetails" class="item-container"></div>
-  </main>
-  <script src="js/product_details.js"></script>
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="logo">Jouets Kids</a>
+            <div class="nav-links">
+                <ul>
+                    <li class="active"><a href="index.html">Accueil</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="basket.html">Panier</a></li>
+                </ul>
+            </div>
+            <img src="img/menu-btn.png" alt="menu" class="menu-hamburger">
+        </nav>
+    </header>
+    <main>
+        <div class="content">
+        </div>
+        <div id="productDetails" class="item-container"></div>
+    </main>
+    <script src="js/product_details.js"></script>
+    <section class="footer">
+      <footer class="footer">
+          <div class="footer-nav">
+              <a href="#">A propos</a>
+              <a href="#">Nos Doudou</a>
+              <a href="#">Assistance</a>
+          </div>
+          <div class="footer-nav-2">
+              <a href="#">Fonctionnement du site</a>
+              <a href="#">Chartes qualité</a>
+              <a href="#">Centre d'aide</a>
+          </div>
+          <div class="footer-nav-3">
+              <a href="#">Conditions générales de vente</a>
+              <a href="#">Qualité</a>
+              <a href="#">Nous contacter</a>
+          </div>
+          <div class="footer-nav-4">
+              <a href="#">Données et confidentalité</a>
+          </div>
+      </footer>
+  </section>
 </body>
 </html>
