j'ai des push qui partent en retard m'en voulez pas si c'est le bordel

--- a/product_details.html
+++ b/product_details.html
@@ -13,7 +13,7 @@
     </div>
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="logo">Jouets Kids</a>
+            <a href="index.html" class="logo">KEDUFRONT</a>
             <div class="nav-links">
                 <ul>
                     <li class="active"><a href="index.html">Accueil</a></li>
